# DSN

./: .gitignore  AGENTS.md  IMPLEMENTED_FEATURES.md  LICENSE  PRIVACY.md  PRODUCT_REQUIREMENTS.md  PROJECT_CONTEXT.md  README.md  index.html  package-lock.json  package.json  vite.config.js
scripts/: build-msix.ps1  create-store-screenshots.ps1  sign-msix-test.ps1
src/: App.vue  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
store/msix/: AppxManifest.xml
