[package]
name = "desktop-sticky-note"
version = "1.0.0"
description = "Desktop Sticky Note"
authors = ["Nanjing Oxing Network Technology Co., Ltd."]
edition = "2021"

[lib]
name = "desktop_sticky_note_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4"] }
